2010-06-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* score/src/threadsuspend.c, score/src/threadresume.c,
	score/src/threadreset.c, score/src/threadinitialize.c,
	score/src/apiext.c, score/include/rtems/score/thread.h,
	score/include/rtems/score/coresem.h:
	Remove RTEMS_ITRON_API conditional blocks.

2010-06-18	Chris Johns <chrisj@rtems.org>

	* libfs/src/rfs/rtems-rfs-file-block.c: Clean up uint64_t maths.

2010-06-18	Chris Johns <chrisj@rtems.org>

	* libfs/src/rfs/rtems-rfs-file-system.h,
	libfs/src/rfs/rtems-rfs-file-system.c: Move questionable macros to
	C functions.

2010-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h: Remove ITRON configuration parameters.

2010-06-17	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* sapi/include/confdefs.h: Remove RTEMS_COVERAGE conditionals.

2010-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/include/rtems/score/object.h,
	score/include/rtems/score/thread.h: Remove prototypes for ITRON
	only methods removed by Ralf.

2010-06-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* itron/Makefile.am, itron/preinstall.am
	itron/include/itron.h, itron/include/itronsys/README
	itron/include/itronsys/eventflags.h,
	itron/include/itronsys/fmempool.h,
	itron/include/itronsys/intr.h,
	itron/include/itronsys/mbox.h,
	itron/include/itronsys/msgbuffer.h,
	itron/include/itronsys/network.h,
	itron/include/itronsys/port.h,
	itron/include/itronsys/semaphore.h,
	itron/include/itronsys/status.h,
	itron/include/itronsys/sysmgmt.h,
	itron/include/itronsys/task.h,
	itron/include/itronsys/time.h,
	itron/include/itronsys/types.h,
	itron/include/itronsys/vmempool.h,
	itron/include/rtems/itron/README,
	itron/include/rtems/itron/config.h,
	itron/include/rtems/itron/eventflags.h,
	itron/include/rtems/itron/fmempool.h,
	itron/include/rtems/itron/intr.h,
	itron/include/rtems/itron/itronapi.h,
	itron/include/rtems/itron/mbox.h,
	itron/include/rtems/itron/msgbuffer.h,
	itron/include/rtems/itron/network.h,